...
            )
        },
        floatingActionButton = {
            if (plans.isNotEmpty()) {
                FloatingActionButton(
                    onClick = onCreatePlanClick,
                    modifier = Modifier.testTag("CreatePlanButton")
                ) {
                    Icon(Icons.Default.Add, contentDescription = stringResource(R.string.create_label))
                }
            }
        }
    ) { padding ->
...
